tests/negative/runtime/err_undefined_var.ual
-- Runtime error test: undefined variable
print(undefined_var)
